src/component/AboutPage/GrowthMantra/style.css
a {
    text-decoration: none;
    color: #ffffff;
    z-index: 1;
}

.background-white {
    background-color: white;
    z-index: -10;
}

.background-fit-content {
    width: 125vw;
    max-width: 180vw;
    background-color: white;
    height: 100vh;
}

@media (min-aspect-ratio: 14/9) {
    .background-fit-content {
        width: 110vw;
        max-width: 140vw;
        background-color: white;
        height: 100vh;
    }
}

@media (min-aspect-ratio: 9/6) {
    .background-fit-content {
        width: 115vw;
        max-width: 140vw;
        background-color: white;
        height: 100vh;
    }
}

.growthMantraContainer {
    width: 155vw;
    margin-right: 12vw;
    height: 100vh;
}

.Growth-text {
    z-index: 1;
    margin-bottom: 0px;
    /* top: -51px; */
    font-family: 'Space Mono 700';
    font-style: normal;
    /* font-weight: 700; */
    font-size: max(30vh, 300px);
    line-height: 80%;
    text-transform: uppercase;
    /* OPRATN Green */
    color: #6FCF97;
}

.IsOurText {
    left: 124px;
    z-index: 1;
    /* top: 288px; */
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke-width: max(0.2vh, 1.5px);
    /* H1 */
    font-family: 'Space Mono 700';
    font-style: normal;
    font-weight: 700;
    font-size: max(9vh, 92px);
    line-height: 90%;
    margin-bottom: 0px;
    text-transform: uppercase;
}

.MantraText {
    left: 126px;
    z-index: 1;
    font-family: 'Space Mono 700';
    font-style: normal;
    /* font-weight: 700; */
    font-size: max(20vh, 200px);
    margin-bottom: 0px;
    line-height: 80%;
    text-transform: uppercase;
    /* Black */
    color: #111111;
}

.paragraphTextGrowthMantra {
    width: 300px;
    height: 40vh;
    z-index: 1;
    /* margin-left: 10px; */
    /* B1 */
    font-family: 'Outfit 300';
    font-style: normal;
    /* font-weight: 300; */
    font-size: 18px;
    line-height: 141.667%;
    /* or 142% */
    /* Black */
    color: black;
}

.paragraphTextGrowthMantraTwo {
    width: 300px;
    height: 238px;
    margin-left: 60px;
    top: 567px;
    margin-top: -60px;
    z-index: 1;
    /* B1 */
    font-family: 'Outfit 300';
    font-style: normal;
    /* font-weight: 300; */
    font-size: 18px;
    line-height: 141.667%;
    /* or 142% */
    /* Black */
    color: black;
}

.carrot {
    margin-left: 20px;
    z-index: 1;
}

.mantraParagraphText {
    width: 30vw;
    height: 30vh;
    margin-right: 3vw;
    text-align: left;
    font-family: 'Outfit 300';
    font-size: max(1vw + 1vh, 24px);
    font-style: normal;
    font-weight: 300;
    line-height: 140%;
    color: #111111;
    z-index: 3;
}

.paragraphTextTwo {
    width: 415px;
    height: 400px;
    margin-left: 30px;
    top: 567px;
    margin-top: -50px;
    text-align: right;
    margin-right: -50px;
    /* B1 */
    font-family: 'Outfit 300';
    font-style: normal;
    /* font-weight: 300; */
    font-size: 18px;
    line-height: 34px;
    /* or 142% */
    color: #111111;
    z-index: 1;
}

.growthMantrainterestedText {
    font-family: 'Space Mono 700';
    font-style: normal;
    font-size: 5rem;
    text-transform: uppercase;
    color: black;
    margin-top: 12%;
    z-index: 1;
}

.mantraAlignment {
    display: flex;
    flex-direction: column;
    padding-top: 12vh;
    z-index: 1;
}

.alignItemsRightMantra {
    display: flex;
    flex-direction: row;
    margin-right: 0;
    margin-top: 0px;
    align-items: flex-start;
    padding-left: 5%;
    padding-right: 5%;
    color: #000000;
    z-index: 1;
}

.textAlignItemsRight {
    padding-top: 5vh;
    height: 100%;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding-left: 5%;
    padding-right: 5%;
    color: #000000;
    z-index: 1;
}

.applyNowBoxGrowthMantra {
    display: inline-block;
    width: 200px;
    height: 50px;
    margin-left: 75px;
    /* margin-top: -14px; */
    /* OPRATN Green */
    background: #6FCF97;
    /* Black */
    border: 1px solid #111111;
    z-index: 15;
}

.blackRectangle {
    display: inline-block;
    width: 200px;
    height: 50px;
    margin-left: -300px;
    background: black;
    border: 1px solid #111111;
    z-index: 1;
}

.applyNowText {
    width: 134.68px;
    height: 36.4px;
    margin-left: 25px;
    font-family: 'Space Mono 400';
    font-style: normal;
    /* font-weight: 400; */
    font-size: 24px;
    line-height: 36px;
    text-align: center;
    /* White */
    color: #FFFFFF;
    z-index: 15;
}

.paragraphTextThree {
    width: 350px;
    height: 238px;
    margin-left: 20px;
    /* top: 567px; */
    margin-top: -40px;
    /* B1 */
    font-family: 'Outfit 300';
    font-style: normal;
    font-weight: 300;
    font-size: 18px;
    line-height: 34px;
    color: black;
    width: 350px;
    height: 238px;
    margin-left: 20px;
    /* top: 567px; */
    padding-top: 2%;
    z-index: 1;
}

.cooltriangle {
    margin-left: -40px;
    margin-top: 120px;
    z-index: 3;
}

.leftcarrot {
    margin-left: 100px;
    margin-right: -100px;
    z-index: 2;
}

.mountain-image {
    z-index: 1;
    position: absolute;
    top: 0px;
    height: 100vh;
    background-color: #6FCF97;
}

.mtn-image {
    position: absolute;
    top: 0%;
    right: 100%;
    background-color: #6FCF97;
}

.m-img {
    height: 45vh;
    z-index: 1;
    position: relative;
    left: -16vw;
}

@media (max-width: 650px) or (max-device-width: 650px) {
    .alignItemsRightMantra {
        display: flex;
        flex-direction: row;
        margin-right: 0;
        margin-top: 0px;
        padding-left: 3vw;
        padding-right: 3vw;
        align-items: center;
        color: #000000;
        z-index: 1;
    }
    .mantraAlignment {
        display: flex;
        flex-direction: column;
        align-items: center;
        padding-top: 15vh;
        margin-left: 0px;
        width: 94vw;
        z-index: 1;
    }
    .Growth-text {
        z-index: 1;
        margin-bottom: 0px;
        font-family: 'Space Mono 700';
        font-style: normal;
        font-size: max(25vw, 99px);
        line-height: 100%;
        text-transform: uppercase;
        /* OPRATN Green */
        color: #6FCF97;
    }
    .IsOurText {
        left: 124px;
        z-index: 1;
        -webkit-text-fill-color: transparent;
        -webkit-text-stroke-width: max(0.2vh, 1.5px);
        font-family: 'Space Mono 700';
        font-style: normal;
        font-weight: 700;
        font-size: max(9vw, 48px);
        line-height: 110%;
        margin-bottom: 0px;
        text-transform: uppercase;
    }
    .MantraText {
        z-index: 1;
        font-family: 'Space Mono 700';
        font-style: normal;
        /* font-weight: 700; */
        font-size: max(20vw, 80px);
        margin-bottom: 0px;
        line-height: 100%;
        text-transform: uppercase;
        /* Black */
        color: #111111;
    }
    .textAlignItemsRight {
        padding-top: 5vh;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        padding-left: 3.5vw;
        padding-right: 3.5vw;
        color: #000000;
        z-index: 1;
    }
    .m-img {
        display: none;
    }
    .mantraParagraphText {
        width: 93vw;
        height: fit-content;
        text-align: left;
        font-family: 'Outfit 300';
        font-size: max(5vw, 24px);
        font-style: normal;
        font-weight: 300;
        line-height: 140%;
        margin-bottom: 6vh;
        color: #111111;
        z-index: 3;
    }
    .background-fit-content {
        width: 100vw;
        height: fit-content;
    }
    .growthMantraContainer {
        width: 100vw;
        height: fit-content;
    }
}

